--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,23 +13,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Run ESLint
-        run: npm run lint
+        run: pnpm run lint
       
       - name: Type check
-        run: npx tsc --noEmit
+        run: pnpm exec tsc --noEmit
       
       - name: Build
-        run: npm run build
+        run: pnpm run build
         env:
           NEXT_PUBLIC_ENGRAM_API_URL: http://localhost:3001
           NEXT_PUBLIC_ENGRAM_API_KEY: test_key
