fix: remove hardcoded localhost URLs, default to production
- engram-code.ts: default to code.openengram.ai instead of localhost:3002
- .env.example: update defaults to production URLs
- Remove localhost comments from type files

Env vars still allow localhost override for local dev via .env.local

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 # Engram API Configuration
-NEXT_PUBLIC_ENGRAM_API_URL=http://localhost:3001
+# Defaults to https://api.openengram.ai if not set
+NEXT_PUBLIC_ENGRAM_API_URL=https://api.openengram.ai
 NEXT_PUBLIC_ENGRAM_API_KEY=your-api-key-here
 NEXT_PUBLIC_ENGRAM_USER_ID=your-user-id
 
 # Server-side (for API routes if needed)
-ENGRAM_API_URL=http://localhost:3001
+ENGRAM_API_URL=https://api.openengram.ai
 ENGRAM_API_KEY=your-api-key-here
 ENGRAM_USER_ID=your-user-id
 
 # Engram Code Service (semantic code search)
-NEXT_PUBLIC_ENGRAM_CODE_URL=http://localhost:3003
+NEXT_PUBLIC_ENGRAM_CODE_URL=https://code.openengram.ai
