feat: add GA4 and OpenPanel analytics (production only)

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ ENGRAM_USER_ID=your-user-id
 
 # Engram Code Service (semantic code search)
 NEXT_PUBLIC_ENGRAM_CODE_URL=https://code.openengram.ai
+
+# GA4 Analytics
+NEXT_PUBLIC_GA_ID=
+
+# OpenPanel Analytics
+NEXT_PUBLIC_OPENPANEL_CLIENT_ID=
