fix(HEY-83): gate self-hosted features on cloud deployments
- DEFAULT_INSTANCE_INFO now detects NEXT_PUBLIC_DEPLOYMENT_MODE=cloud
  and defaults to cloud features (prevents flash of self-hosted UI
  before API responds)
- Middleware blocks /setup and /code routes on cloud builds
- Code page redirects to /dashboard on cloud mode (page-level guard)
- Added NEXT_PUBLIC_DEPLOYMENT_MODE to .env.example docs

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ NEXT_PUBLIC_GA_ID=
 
 # OpenPanel Analytics
 NEXT_PUBLIC_OPENPANEL_CLIENT_ID=
+
+# Deployment mode (set to "cloud" for managed SaaS deployment)
+# Controls default feature visibility before API responds
+# NEXT_PUBLIC_DEPLOYMENT_MODE=cloud
