feat: edition-aware build (NEXT_PUBLIC_EDITION=local|cloud)
- Replace NEXT_PUBLIC_DEPLOYMENT_MODE with NEXT_PUBLIC_EDITION
- Export EDITION, isCloud, isLocal from types/instance.ts
- Sidebar navigation gated by edition (local vs cloud items)
- EditionGuard component for page-level access control
- Billing, Cloud Settings, Ensemble: cloud only
- Setup wizard: local only
- Instance context exposes edition, isCloud, isLocal
- .env.example updated with NEXT_PUBLIC_EDITION docs

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ NEXT_PUBLIC_GA_ID=
 # OpenPanel Analytics
 NEXT_PUBLIC_OPENPANEL_CLIENT_ID=
 
-# Deployment mode (set to "cloud" for managed SaaS deployment)
-# Controls default feature visibility before API responds
+# Edition: "local" (default, self-hosted) or "cloud" (managed SaaS)
+# Controls sidebar navigation, page access, and default feature flags at build time.
+# The /v1/instance/info API can override feature flags at runtime.
+NEXT_PUBLIC_EDITION=local
+
+# Legacy (deprecated, use NEXT_PUBLIC_EDITION instead)
 # NEXT_PUBLIC_DEPLOYMENT_MODE=cloud
