--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# Environment — never commit secrets
+.env
+.env.*
+!.env.example
 .env*.local
 
 # vercel
@@ -34,5 +37,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-.env.local.cloud
-.env.local.selfhosted
