--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,16 @@
 # Engram API Configuration
 # Defaults to https://api.openengram.ai if not set
 NEXT_PUBLIC_ENGRAM_API_URL=https://api.openengram.ai
-NEXT_PUBLIC_ENGRAM_API_KEY=your-api-key-here
 NEXT_PUBLIC_ENGRAM_USER_ID=your-user-id
 
-# Server-side (for API routes if needed)
+# Server-side only (never exposed to browser — used by /api/engram proxy)
 ENGRAM_API_URL=https://api.openengram.ai
 ENGRAM_API_KEY=your-api-key-here
 ENGRAM_USER_ID=your-user-id
+
+# Optional: JWT secret for full signature verification in middleware/proxy
+# Without this, middleware still validates token expiry (decode-only)
+JWT_SECRET=
 
 # Engram Code Service (semantic code search)
 NEXT_PUBLIC_ENGRAM_CODE_URL=https://code.openengram.ai
