--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-force-graph-2d": "^1.29.0",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "jose": "^6.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
