--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/nextjs": "^8.6.17",
+    "@storybook/react": "^8.6.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
