--- a/package.json
+++ b/package.json
@@ -43,11 +43,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
-    "@storybook/addon-a11y": "^8.6.17",
-    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-a11y": "^10.2.10",
     "@storybook/blocks": "^8.6.14",
-    "@storybook/nextjs": "^8.6.17",
-    "@storybook/react": "^8.6.17",
+    "@storybook/react": "^10.2.10",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
@@ -56,12 +54,15 @@
     "@vitejs/plugin-react": "^5.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "^10.2.10",
     "jsdom": "^28.1.0",
     "postcss": "^8",
-    "storybook": "^8.6.17",
+    "storybook": "^10.2.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "@storybook/nextjs-vite": "10.2.10",
+    "vite": "^7.0.0",
+    "@storybook/addon-docs": "^10.2.10"
   }
 }
