--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,17 @@ name: CI
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main]
   pull_request:
     branches: [main]
 
 jobs:
-  lint-and-build:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -21,21 +21,24 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'pnpm'
-      
+          node-version: 20
+          cache: pnpm
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
-      - name: Run ESLint
+
+      - name: Lint
         run: pnpm run lint
-      
+
       - name: Type check
         run: pnpm exec tsc --noEmit
-      
+
       - name: Build
         run: pnpm run build
         env:
           NEXT_PUBLIC_ENGRAM_API_URL: http://localhost:3001
           NEXT_PUBLIC_ENGRAM_API_KEY: test_key
           NEXT_PUBLIC_ENGRAM_USER_ID: test_user
+
+      - name: Unit tests
+        run: pnpm test
