--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   "devDependencies": {
     "@playwright/test": "^1.58.2",
     "@storybook/addon-a11y": "^10.2.10",
+    "@storybook/addon-docs": "^10.2.10",
     "@storybook/blocks": "^8.6.14",
+    "@storybook/nextjs-vite": "10.2.10",
     "@storybook/react": "^10.2.10",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -60,9 +62,7 @@
     "storybook": "^10.2.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vitest": "^4.0.18",
-    "@storybook/nextjs-vite": "10.2.10",
     "vite": "^7.0.0",
-    "@storybook/addon-docs": "^10.2.10"
+    "vitest": "^4.0.18"
   }
 }
