--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^10.38.0",
+    "@types/d3": "^7.4.3",
     "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "jose": "^6.0.8",
     "lucide-react": "^0.563.0",
     "next": "14.2.35",
