fix: collapse multi-line ticket refs to single line for GITHUB_ENV
Multiple ticket references (e.g. HEY-340 HEY-341) caused a newline in
the GITHUB_ENV value, which GitHub Actions rejects. Pipe through tr/xargs
to produce a space-separated single line.

--- a/.github/workflows/linear-sync.yml
+++ b/.github/workflows/linear-sync.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 2
       - name: Extract ticket references
         run: |
-          TICKETS=$(git log --format=%B -1 HEAD | grep -oP 'HEY-\d+' | sort -u || true)
+          TICKETS=$(git log --format=%B -1 HEAD | grep -oP 'HEY-\d+' | sort -u | tr '\n' ' ' | xargs || true)
           echo "Found tickets: $TICKETS"
           echo "TICKETS=$TICKETS" >> $GITHUB_ENV
       - name: Comment on Linear tickets
